--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="red">RED</string>
     <string name="blue">BLUE</string>
     <string name="green">GREEN</string>
+    <string name="Location">Maseru</string>
+    <string name="the_skies">Mostly Sunny</string>
+    <string name="temp">19°C</string>
 </resources>
